src/objects/MCAR_Claim_Management__c.object
<CustomObject>
    <fields>
        <fullName>Part_Category__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>Indirect Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSCM AMS PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Summary__c</fullName>
        <label>Payment Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Time_period__c</fullName>
        <inlineHelpText>Time frame for repayment that Claim Team and Supplier have agreed to</inlineHelpText>
        <label>Payment Time period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By__c</fullName>
        <inlineHelpText>Technical details of  failure information provided by</inlineHelpText>
        <label>Prepared By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_On__c</fullName>
        <inlineHelpText>Prepared On</inlineHelpText>
        <label>Prepared On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <defaultValue>0.95</defaultValue>
        <description>This data will help to Management &amp; BL to estimate claim recovery amount probability. Default value 95%. Displayed to all categories.</description>
        <inlineHelpText>Estimate of portion of claims costs that will be recovered.</inlineHelpText>
        <label>Estimated Recovery(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Data__c</fullName>
        <label>Product Data</label>
        <picklist>
            <picklistValues>
                <fullName>.LTE 2.3GHZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9 CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9G CDMA XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1X MODEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1X MODEM PICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1XMODEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2*2LTE PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G DDRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G LPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G SLIM XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G TRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G UBS XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1RFH/800RFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 CLPA/1,9 CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MHZ XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 RFH TANAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M SLIM XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M UBS XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M CDMA XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M SLIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800RFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTA 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADPDU-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALARM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Customer_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Claim related to a failure at a customer installation or site?</inlineHelpText>
        <label>Related to Customer Issue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Due_Date__c</fullName>
        <label>Reclamation Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retrofit_Amount__c</fullName>
        <inlineHelpText>If applicable, please list the amounts for each retrofit case that has been listed above</inlineHelpText>
        <label>Retrofit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retrofit_Case__c</fullName>
        <inlineHelpText>If applicable, please list the case(s) applicable for this Claim</inlineHelpText>
        <label>Retrofit Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis_Approved_Date__c</fullName>
        <description>Root Cause Analysis Approved Date</description>
        <inlineHelpText>Root Cause Analysis Approved Date</inlineHelpText>
        <label>Root Cause Analysis Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether the Root Cause Analysis has been completed.</inlineHelpText>
        <label>Root Cause Analysis Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Summary__c</fullName>
        <description>Root Cause Summary</description>
        <inlineHelpText>Executive summary of the issue that lead to this Claim.  WILL BE COPIED AND PASTED INTO THE CLAIM LETTER SENT TO THE SUPPLIER.</inlineHelpText>
        <label>Root Cause Summary - for CLAIM LETTER</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Reclamation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to check whether to send reclamation letter or not.</description>
        <label>Send Reclamation Letter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sending_Claim_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sending Claim letter to users</description>
        <inlineHelpText>If you want send the claim letter to user nee to check</inlineHelpText>
        <label>Send Claim Letter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sending_Settlement_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If u want send settlement letter to users please check</inlineHelpText>
        <label>Send Settlement Letter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Loss__c</fullName>
        <inlineHelpText>Total cost summation of the NCC Services Worksheets, below</inlineHelpText>
        <label>Services Loss</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Category Group</label>
        <picklist>
            <controllingField>Part_Category__c</controllingField>
            <picklistValues>
                <fullName>Basestation Antennas &amp; Ecosystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Incubation &amp; e2e Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Manufacturing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Procurement &amp; Telecoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Subcontracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor and RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard and Interconnect Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Other NI Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Telecom Implementation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing, Manufacturing &amp; Measurement Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sup_Confirmed_Re_ceipt_of_Reclamation__c</fullName>
        <label>Reclamation Confirmed Receipt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supplied_Product_Summary__c</fullName>
        <label>Supplied Product Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Confirmation_BY__c</fullName>
        <label>Supplier Confirmation BY</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplier_Confirmation_Mail_Detail__c</fullName>
        <description>Supplier confirmation details of reclamation Letter</description>
        <label>Supplier Confirmation Mail Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Details_Review_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical Details Review  Approval</description>
        <inlineHelpText>Please confirm if the Claim Team has endorsed the Root Cause Summary from above</inlineHelpText>
        <label>Root Cause Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Please provide a brief, 100 character or less description of the claim using the most important descriptors, i.e. type of failure, customer name, site where failed, etc.</inlineHelpText>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Claim_Cost__c</fullName>
        <formula>Materials_Factory_Loss__c + Materials_Field_Loss__c +  Materials_Hub_Loss__c + Services_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost summation of the worksheets (below)</inlineHelpText>
        <label>Total Cost - Roll-up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_To_Be_Claimed__c</fullName>
        <description>Total cost to be claimed</description>
        <inlineHelpText>Amount (in Euro) that will be used on the Claim Letter</inlineHelpText>
        <label>Claimed Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validated_Payments_Total__c</fullName>
        <formula>Confirmed_Write_Offs__c +  Confirmed_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total summation of payments thus far (read only)</inlineHelpText>
        <label>Confirmed Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4C_Claim_ID__c</fullName>
        <inlineHelpText>If applicable, add ID Number of 4C claim that is related to this claim.</inlineHelpText>
        <label>4C Claim ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>count_MCARs__c</fullName>
        <label>count MCARs</label>
        <summaryForeignKey>MCAR_Claim__c.MCAR_Claim_Management__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>manual_date_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>manual date updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updated_manufacturer__c</fullName>
        <label>updated_manufacturer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>Active_Claims_Claims_Closed_in_2015</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Open_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Category__c</field>
            <operation>equals</operation>
            <value>Partnering Procurement (PO)</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Data Collection,Negotiation,Payments</value>
        </filters>
        <label>All - PO (Tracker View)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Technical_Details_Review_Approval__c</columns>
        <columns>Manufacturer_Accepts_Full_Responsibility__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Days_Open__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Claims</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All4</fullName>
        <booleanFilter>1 and (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Negotiation,Payments,Closed,Data Collection</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2015</value>
        </filters>
        <label>Active Claims &amp; Claims Closed YTD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All6</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>Part_Category__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Category__c</field>
            <operation>equals</operation>
            <value>GSCM AMS PO</value>
        </filters>
        <label>DPE&apos;s claims</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Less_Cancelled_Draft</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Cancelled</value>
        </filters>
        <label>All (Less Cancelled, Draft)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Less_Cancelled_Draft1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Manufacturer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PP</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>Part_Category__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Category__c</field>
            <operation>equals</operation>
            <value>Product Procurement (PP)</value>
        </filters>
        <label>All - PP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PP_Tracker_View</fullName>
        <booleanFilter>1 AND (2 OR 3) and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>EnterpriseID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Colour_Status__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Category_Manager_Email__c</columns>
        <columns>Root_Cause_Analysis_Approved_Date__c</columns>
        <columns>Non_Conformance_Costs_Approved_Date__c</columns>
        <columns>Legal_Analysis_Approved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Category__c</field>
            <operation>contains</operation>
            <value>Product Procurement</value>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Cancelled,Closed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2015</value>
        </filters>
        <filters>
            <field>Title__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>All - PP (Tracker View)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PP_Tracker_View_Open_Claims</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EnterpriseID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Colour_Status__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Category_Manager_Email__c</columns>
        <columns>Root_Cause_Analysis_Approved_Date__c</columns>
        <columns>Non_Conformance_Costs_Approved_Date__c</columns>
        <columns>Legal_Analysis_Approved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Category__c</field>
            <operation>contains</operation>
            <value>Product Procurement</value>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Cancelled,Closed</value>
        </filters>
        <label>All - PP (Tracker View - Open Claims)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Claims_Open_and_Closed_This_Year</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Negotiation,Payments,Closed</value>
        </filters>
        <filters>
            <field>Open_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2013</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2016</value>
        </filters>
        <label>Claims Open and Closed This Year</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Claims_This_Year</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Claims</label>
    </listViews>
    <listViews>
        <fullName>My_Claims1</fullName>
        <booleanFilter>(1 OR 2) and 3 and 4 and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Part_Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Part_Category__c</field>
            <operation>equals</operation>
            <value>Product Procurement (PP)</value>
        </filters>
        <filters>
            <field>Total_Cost_To_Be_Claimed__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Cancelled</value>
        </filters>
        <label>Claims for Scorecard Report</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Claim_Type__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Data Collection,Negotiation,Payments,Draft</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Claims1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Part_Category__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014</value>
        </filters>
        <label>Closed Claims This Year</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Claims2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Manufacturer__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Claim_Type__c</columns>
        <columns>Total_Cost_To_Be_Claimed__c</columns>
        <columns>Amount__c</columns>
        <columns>Validated_Payments_Total__c</columns>
        <columns>Retrofit_Case__c</columns>
        <columns>Retrofit_Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Data Collection,Negotiation,Payments,Claim</value>
        </filters>
        <filters>
            <field>Part_Category__c</field>
            <operation>equals</operation>
            <value>Product Procurement (PP)</value>
        </filters>
        <filters>
            <field>Claim_Type__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Open Claims for Biweekly Reviews</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Claim-{00000}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <recordTypes>
        <fullName>MCAR_Claim_Data_Collection_Layout</fullName>
        <active>true</active>
        <description>MCAR Claim Data Collection Layout</description>
        <label>MCAR Claim Data Collection Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_Claim_Final_Stage_layout</fullName>
        <active>true</active>
        <description>MCAR Claim Final Stage layout</description>
        <label>MCAR Claim Final Stage layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_Claim_Negotiation_layout</fullName>
        <active>true</active>
        <description>MCAR Claim Negotiation layout</description>
        <label>MCAR Claim Negotiation layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_Claim_close_layout</fullName>
        <active>true</active>
        <description>MCAR Claim close layout</description>
        <label>MCAR Claim close layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_Layout_with_Cancel_Comments</fullName>
        <active>true</active>
        <label>MCAR Layout with Cancel Comments</label>
    </recordTypes>
</CustomObject>